@@ -2,6 +2,7 @@
   - Tap device emulation for Solaris (Sittichai Palanisong)
   - Monitor multiplexing to several I/O channels (Jason Wessel)
   - ds1225y nvram support (Herve Poussineau)
+  - CPU model selection support (J. Mayer, Paul Brook, Herve Poussineau)
 
 version 0.9.0:
 
